<resources>
    <string name="app_name">expenseManagement</string>
    <string name="txtLogin">Login</string>
    <string name="txt_signup">Sign Up</string>
    <string name="don_t_have_an_account_yet_sign_up">Don\'t have an account yet? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="gain_total_control_of_your_money">Gain total control of your money</string>
    <string name="become_your_own_money_manager_and_make_every_cent_count">Become your own money manager and make every cent count</string>
    <string name="track_your_transaction_easily_with_categories_and_financial_report">Track your transaction easily, with categories and financial report</string>
    <string name="know_where_your_money_goes">Know where your money goes</string>
    <string name="setup_your_budget_for_each_category_so_you_in_control">Setup your budget for each category so you in control</string>
    <string name="planning_ahead">Planning ahead</string>
    <string name="forgot_password_app_bar">Forgot password</string>
    <string name="title_forgot_password">Don’t worry. Enter your email and we’ll send you a link to reset your password.</string>
    <string name="txtContinue">Continue</string>
    <string name="your_email_is_on_the_way">Your email is on the way</string>
    <string name="description_check_your_email">Check your email test@test.com and follow the instructions to reset your password</string>
    <string name="back_to_login">Back to login</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="reset_password">Reset password</string>
    <string name="looks_like_you_are_new_to_our_app">Looks Like You Are New To Our App!</string>
    <string name="description_authen_success">Thank you for completing the steps to use the application. We wish you a great experience and effective management of your expenses.</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="add">Add</string>
    <string name="budget">Budget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_blance">Account Blance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="see_all">See all</string>
    <string name="profile">Profile</string>
    <string name="transfer">transfer</string>
    <string name="Transfer">Transfer</string>
    <string name="see_your_financial_report">See your financial report</string>
    <string name="username">Username</string>
    <string name="add_new_wallet">+ Add new wallet</string>
    <string name="balance">Balance</string>
    <string name="account_number">Account number</string>
    <string name="select_bank_account">Select bank account</string>
    <string name="agribank">Agribank</string>
    <string name="how_much">How much</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="wallet">Wallet</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_date">Select Date</string>
    <string name="financial_report">Financial Report</string>
    <string name="expense_tab">Expense Tab</string>
    <string name="total">Total</string>
    <string name="add_new_category">Add new Category</string>
    <string name="enter_your_category">Enter your category</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="description_no_data_budget">You don’t have a budget. Let’s make one so you in control.</string>
    <string name="create_a_budget">Create a budget</string>
    <string name="select_category">Select Category</string>
    <string name="_0">0</string>
    <string name="d">đ</string>
    <string name="how_much_do_yo_want_to_spend">How much do yo want to spend?</string>
    <string name="remaining">Remaining</string>
    <string name="you_ve_exceed_the_limit">You’ve exceed the limit!</string>
    <string name="detail_budget">Detail budget</string>
    <string name="edit">Edit</string>
    <string name="remove_this_transaction">Remove this transaction?</string>
    <string name="remove_this_budget">Remove this budget?</string>
    <string name="are_you_sure_do_you_wanna_remove_this_transaction">Are you sure do you wanna remove this transaction?</string>
    <string name="are_you_sure_do_you_wanna_remove_this_budget">Are you sure do you wanna remove this Budget?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="enter_your_fist_name">Enter your fist name</string>
    <string name="save">Save</string>
    <string name="export_data">Export Data</string>
    <string name="setting">Setting</string>
    <string name="what_format_do_you_want_to_export">What Format Do You Want To Export?</string>
    <string name="logout">Logout ?</string>
    <string name="are_you_sure_do_you_wanna_logout">Are you sure do you wanna logout ?</string>
    <string name="detail_category">Detail Category</string>
    <string name="detail_account">Detail Account</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string-array name="spinner_items">
        <item>Month</item>
        <item>Year</item>
        <item>Day</item>
    </string-array>
</resources>