<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homepage"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/transactionpage"
        android:title="@string/transaction"
        android:icon="@drawable/transaction"
        />
    <item
        android:id="@+id/add"
        android:title=""
        android:enabled="false"
        />
    <item
        android:id="@+id/budgetpage"
        android:title="@string/budget"
        android:icon="@drawable/budget"
        />
    <item
        android:id="@+id/profilepage"
        android:title="@string/profile"
        android:icon="@drawable/user"
        />
</menu>