<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/color_text"
            android:paddingStart="130sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:text="@string/first_name"
            />
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/edtFistName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_your_fist_name"
            android:padding="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:text="@string/last_name"
            />
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/edtAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enter_your_last_name"
            android:padding="12dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="350dp"
        android:textSize="18sp"
        android:backgroundTint="@color/background_button"
        android:text="@string/save"
        />
</LinearLayout>