<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".activity.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/backArrowForgotPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            android:layout_gravity="start"
            android:padding="8dp" />
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_app_bar"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:paddingHorizontal="16dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="69dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:autofillHints="emailAddress"
        android:paddingStart="16dp"
        android:hint="@string/email"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"/>

    <Button
        android:id="@+id/btnContinue"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtContinue"
        android:textAllCaps="false"
        android:backgroundTint="@color/background_button"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        android:height="56dp"
        android:textSize="18sp"
        />

</LinearLayout>