<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_bg"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/color_text"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_do_you_wanna_logout"
        android:textColor="@color/text_description"
        android:textSize="18sp"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:textColor="@color/background_button"
            android:backgroundTint="@color/second_background_button"
            android:layout_height="65dp"
            android:text="@string/no"
            android:layout_marginRight="10dp"
            />
        <Button
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/background_button"
            android:layout_height="65dp"
            android:text="@string/yes"
            />
    </LinearLayout>


</LinearLayout>