<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/IncomeActivity"
    android:layout_height="match_parent"
    android:background="@color/color_income"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/backArrowIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_white"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingStart="140dp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/background_bottom_bar"
        android:text="@string/how_much"
        android:layout_marginTop="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/white"
            android:id="@+id/et_amountIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:textSize="66sp"
            android:textStyle="bold"
            android:gravity="end"
            android:background="@null"
            android:paddingStart="20dp"
            android:focusableInTouchMode="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="đ"
            android:textSize="64sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingStart="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_bg"
        >
        <EditText
            android:id="@+id/edtSelectCategoryIncome"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/category"
            android:focusable="false"
            android:clickable="true"
            android:drawableRight="@drawable/ic_dropdown"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:padding="12dp"
            android:gravity="center_vertical" />
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/edtDescripTionIncome"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/description"
            android:padding="12dp" />
        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/edtSelectCashIncome"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/wallet"
            android:focusable="false"
            android:clickable="true"
            android:drawableRight="@drawable/ic_dropdown"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:padding="12dp"
            android:gravity="center_vertical" />

        <EditText
            android:layout_marginTop="16dp"
            android:id="@+id/edtSelectDateIncome"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/select_date"
            android:focusable="false"
            android:clickable="true"
            android:drawableRight="@drawable/ic_dropdown"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:padding="12dp"
            android:gravity="center_vertical" />
        <Button
            android:id="@+id/btnContinueExpense"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/background_button"
            android:layout_width="match_parent"
            android:text="@string/txtContinue"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_height="60dp"/>
    </LinearLayout>

</LinearLayout>