<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".activity.SendEmailSuccessActivity">

    <ImageView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/forgot_password"
        />

    <TextView
        android:layout_marginTop="18dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email_is_on_the_way" />

    <TextView
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:paddingHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/description_check_your_email"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btnContinue"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:backgroundTint="@color/background_button"
        android:textColor="#FFFFFF"
        android:layout_marginTop="180dp"
        android:height="56dp"
        android:textSize="18sp"
        />

</LinearLayout>