<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    tools:context=".activity.OtpAuthenSuccessActivity">

    <ImageView
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/otp_success"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_marginTop="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginHorizontal="14dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/looks_like_you_are_new_to_our_app"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_authen_success"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="16dp"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_go"
        android:textAllCaps="false"
        android:backgroundTint="@color/background_button"
        android:textColor="#FFFFFF"
        android:layout_marginTop="76dp"
        android:layout_marginHorizontal="16dp"
        android:height="56dp"
        android:textSize="18sp"
        />

</LinearLayout>